# ifrs16

./: .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
docs/source/: conf.py  index.rst  installation.rst
examples/: basic.py
ifrs16/: __init__.py
ifrs16/core/: exceptions.py  lease.py  organisation.py
ifrs16/tests/: factories.py  test_lease.py  test_organisation.py
